--- a/greivers/index.html
+++ b/greivers/index.html
@@ -1,9 +1,7 @@
 <html><head>
     <meta charset="UTF-8">
-    <title>Dodge the Greivers!</title>
-  <meta name="author" content="MinecraftNate520">
-  <meta name="description" content="Epic doge meme xd">
-  <meta name="keywords" content="funny,doge,epic">
+    <title>Dodge the Grievers!</title>
+  <meta name="author" content="MinecraftNate520">>
   <link href="https://fonts.googleapis.com/css?family=Raleway|Roboto" rel="stylesheet">
   <style>
 	body {
@@ -25,7 +23,7 @@
   <link rel="shortcut icon" type="image/png" href="https://www.shitpostbot.com/img/sourceimages/sword-doge-5800989b7bac4.png"/>
   </head>
   <body style="text-align: center; background-color: black;">
-	<p><img src="https://i.imgur.com/nSnkR2Z.png" alt="" width="467" height="87" /></p>
+	<p><img src="https://i.imgur.com/Ytt0l9d.png" alt="" width="467" height="87" /></p>
     <iframe class="glow" src="dodge.html" style="border:0px #ffffff none;" name="game" scrolling="no" frameborder="0" marginheight="0px" marginwidth="0px" height="480px" width="720px" allowfullscreen></iframe>
     <br>
 	<div class="info">
