--- a/greivers/index.html
+++ b/greivers/index.html
@@ -1,8 +1,7 @@
 <html><head>
     <meta charset="UTF-8">
     <title>Dodge the Grievers!</title>
-  <meta name="author" content="MinecraftNate520">>
-  <link href="https://fonts.googleapis.com/css?family=Raleway|Roboto" rel="stylesheet">
+  <meta name="author" content="MinecraftNate520"><link rel="prefetch"></head><body style="text-align: center; background-color: black;"><link href="https://fonts.googleapis.com/css?family=Raleway|Roboto" rel="stylesheet">
   <style>
 	body {
 		color: white;
@@ -20,11 +19,11 @@
 	
   </style>
 
-  <link rel="shortcut icon" type="image/png" href="https://www.shitpostbot.com/img/sourceimages/sword-doge-5800989b7bac4.png"/>
-  </head>
-  <body style="text-align: center; background-color: black;">
-	<p><img src="https://i.imgur.com/Ytt0l9d.png" alt="" width="467" height="87" /></p>
-    <iframe class="glow" src="dodge.html" style="border:0px #ffffff none;" name="game" scrolling="no" frameborder="0" marginheight="0px" marginwidth="0px" height="480px" width="720px" allowfullscreen></iframe>
+  <link rel="shortcut icon" type="image/png" href="https://www.shitpostbot.com/img/sourceimages/sword-doge-5800989b7bac4.png">
+  
+  
+	<p><img src="https://i.imgur.com/Ytt0l9d.png" alt="" width="467" height="87"></p>
+    <iframe class="glow" src="dodge.html" style="border:0px #ffffff none;" name="game" scrolling="no" frameborder="0" marginheight="0px" marginwidth="0px" height="480px" width="720px" allowfullscreen=""></iframe>
     <br>
 	<div class="info">
     	<h1>Equipment</h1>
@@ -33,4 +32,5 @@
 	<h1>Rules</h1> <p>Answer questions in lowercase</p>
 	</div>
     <script src="//instant.page/1.1.0" type="module" integrity="sha384-EwBObn5QAxP8f09iemwAJljc+sU+eUXeL9vSBw1eNmVarwhKk2F9vBEpaN9rsrtp"></script>
+
 </body></html>
